mysql-8.4/0.0.1/version-policy.mdx
---
title: "Version Policy"
description: "Understand VillageSQL's versioning scheme and MySQL compatibility matrix."
noindex: true
---

## Overview

VillageSQL follows clear versioning and compatibility policies to help you make informed decisions about deployment and upgrades.

## VillageSQL Versioning

VillageSQL uses [Semantic Versioning](https://semver.org/) (SemVer) to communicate the nature and impact of changes in each release.

### Version Format

Versions follow the format: **MAJOR.MINOR.PATCH**

```
0.0.1
│ │ │
│ │ └─ PATCH version
│ └─── MINOR version
└───── MAJOR version
```

### Version Increment Rules

- **MAJOR version** (e.g., 1.0.0 → 2.0.0): Breaking changes that may require code modifications or database migrations
- **MINOR version** (e.g., 0.1.0 → 0.2.0): New features and functionality added in a backwards-compatible manner
- **PATCH version** (e.g., 0.0.1 → 0.0.2): Backwards-compatible bug fixes and minor improvements

<Note>
  VillageSQL is currently in pre-1.0 development (version 0.x.x). During this phase, API and extension interfaces may change more frequently as we stabilize the platform.
</Note>

## Extension Compatibility

VillageSQL extensions are version-specific. An extension built for one version of VillageSQL may not work with another version.

When upgrading VillageSQL:

1. Check extension compatibility for the new version
2. Update or rebuild extensions as needed
3. Test extensions in a development environment before production deployment

See the [Upgrade Guide](/mysql-8.4/0.0.1/upgrade) for detailed upgrade procedures.
